<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_of_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_weight="3"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toBottomOf="@id/guideline6">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_waiter"
            android:layout_width="90sp"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"

            android:layout_marginTop="18dp"
            android:src="@drawable/layout_register_ic_waiter" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"

            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="19.3sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:fontFamily="@font/poppins_bold"
                android:text="@string/to_orange_restaurant"
                android:textColor="@color/black"
                android:textSize="19.3sp" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="300dp"

        app:layout_constraintTop_toBottomOf="@id/top_of_screen"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_confirm_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="custom"
            app:endIconTint="@color/black"
            app:endIconDrawable="@drawable/layout_confirm_ic_help"
            app:helperTextTextColor="@color/black"
            app:helperTextTextAppearance="@font/poppins_semibold"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:weightSum="1"
            app:hintTextAppearance="@style/HelperTextAppearance"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_register_textinput_effect"

                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/verification_code_send_to_email"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/layout_register_textinput_effect"
            android:fontFamily="@font/poppins_bold"

            android:gravity="center"
            android:padding="2dp"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="16sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_confirm_user"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0"  />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>

